--- a/templates/game_creation/index.html.twig
+++ b/templates/game_creation/index.html.twig
@@ -62,6 +62,18 @@
                     </div>
                 </div>
 
+                <div class="mb-4">
+                    {{ form_row(form.shortDescription, {'attr': {'class': 'form-control bg-dark text-white'}}) }}
+                </div>
+
+                <div class="mb-4">
+                    {{ form_row(form.developer, {'attr': {'class': 'form-control bg-dark text-white'}}) }}
+                </div>
+
+                <div class="mb-4">
+                    {{ form_row(form.publisher, {'attr': {'class': 'form-control bg-dark text-white'}}) }}
+                </div>
+
                 <div class="d-flex justify-content-center mt-4">
                     {{ form_widget(form.submit, {
                         'attr': {
