footer bg color change

--- a/templates/signup/index.html.twig
+++ b/templates/signup/index.html.twig
@@ -115,22 +115,8 @@
 
               <!-- Register buttons -->
               <div class="text-center mt-4">
-                <p class="mb-3 text-light">or sign up with:</p>
-                <button type="button" class="btn btn-link btn-floating mx-1 text-light">
-                  <i class="fab fa-facebook-f"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1 text-light">
-                  <i class="fab fa-google"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1 text-light">
-                  <i class="fab fa-twitter"></i>
-                </button>
-
-                <button type="button" class="btn btn-link btn-floating mx-1 text-light">
-                  <i class="fab fa-github"></i>
-                </button>
+              <p class="mb-3 text-light">already have an account?  <a href="/login">   Log in</a></p>
+                
               </div>
             </form>
           </div>
