--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,6 @@
 <html lang="en">
 <head>
     <!-- base.html.twig -->
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-pzjw8f+ua7Kw1TIq0v8Fqk5eHkFz8r+6w9c2YO9lYxSHHEjr6zpbZIK6pPpBfnTx" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}GameHub - Your Ultimate Game Store{% endblock %}</title>
@@ -104,7 +103,7 @@
 {% block body %}{% endblock %}
 
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-md-3 mb-4">
