--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -85,7 +85,7 @@
     </section>
 
     <!-- Free Games -->
-    <section class="py-5 bg-dark">
+    <section class="py-5 bg-secondary-subtle text-black">
         <div class="container">
             <h2 class="section-title">Free Games</h2>
             {% for freeGame in freeGames %}
