--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- base.html.twig -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}GameHub - Your Ultimate Game Store{% endblock %}</title>
@@ -102,7 +103,7 @@
 {% block body %}{% endblock %}
 
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-md-3 mb-4">
