--- a/templates/signup/index.html.twig
+++ b/templates/signup/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}SignUp{% endblock %}
 
 {% block body %}
 <!-- Section: Design Block -->
@@ -27,7 +27,7 @@
       width: 220px;
       top: -60px;
       left: -130px;
-      background: radial-gradient(#111111,rgb(250, 188, 1));
+      background: radial-gradient(HSL(250, 100%, 10%),rgb(250, 188, 1));
       overflow: hidden;
     }
 
@@ -37,7 +37,7 @@
       right: -110px;
       width: 300px;
       height: 300px;
-      background: radial-gradient(#222222,rgb(250, 188, 1));
+      background: radial-gradient(HSL(250, 100%, 10%),rgb(250, 188, 1));
       overflow: hidden;
     }
 
@@ -52,8 +52,8 @@
     <div class="row gx-lg-5 align-items-center mb-5">
       <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
         <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-          Log In Now <br />
-          <span style="color: hsl(218, 81%, 75%)">And Begin Your Quest </span>
+          Sign Up Now <br />
+          <span style="color: hsl(218, 81%, 75%)">and join us in a seamless experience</span>
         </h1>
         <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -71,7 +71,21 @@
           <div class="card-body px-4 py-5 px-md-5">
             <form>
               <!-- 2 column grid layout with text inputs for the first and last names -->
-            
+              <div class="row">
+                <div class="col-md-6 mb-1">
+                  <div class="form-group">
+                    <label class="form-label mb-2 text-light" for="form3Example1">First name</label>
+                    <input type="text" id="form3Example1" class="form-control form-control-lg bg-dark text-light border-dark" />
+                  </div>
+                </div>
+                <div class="col-md-6 mb-0">
+                  <div class="form-group">
+                    <label class="form-label mb-2 text-light" for="form3Example2">Last name</label>
+                    <input type="text" id="form3Example2" class="form-control form-control-lg bg-dark text-light border-dark" />
+                  </div>
+                </div>
+              </div>
+
               <!-- Email input -->
               <div class="form-group mb-4">
                 <label class="form-label mb-2 text-light" for="form3Example3">Email address</label>
@@ -88,20 +102,20 @@
               <div class="form-check d-flex justify-content-center mb-4">
                 <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
                 <label class="form-check-label text-light" for="form2Example33">
-                  Remember me
+                  Subscribe to our newsletter
                 </label>
               </div>
 
               <!-- Submit button -->
               <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-dark btn-lg">
-                  Login
+                  Sign up
                 </button>
               </div>
 
               <!-- Register buttons -->
               <div class="text-center mt-4">
-                <p class="mb-3 text-light">or create an account:</p><a href="/signup">Here</a></p>
+              <p class="mb-3 text-light">already have an account?  <a href="/login">   Log in</a></p>
                 
               </div>
             </form>
