--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
 
         .hero-section {
             background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-            url('{{ asset('images/hero-bg.jpg') }}') no-repeat center center;
+            url('{{ asset('images/hero-bg1.jpg') }}') no-repeat center center;
             background-size: cover;
             height: 70vh;
             display: flex;
