--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -7,27 +7,29 @@
 <section class="background-radial-gradient overflow-hidden">
   <style>
     .background-radial-gradient {
-      background-color: hsl(218, 41%, 5%);
+      background-color: hsl(168, 38.50%, 5.10%);
       background-image: radial-gradient(650px circle at 0% 0%,
-          hsl(226, 40.60%, 25.10%) 15%,
-          hsl(218, 41%, 20%) 35%,
+          hsl(226, 40.50%, 14.50%) 15%,
+          hsl(218, 42.90%, 11.00%) 35%,
           hsl(218, 41%, 10%) 75%,
           hsl(218, 41%, 9%) 80%,
           transparent 100%),
         radial-gradient(1250px circle at 100% 100%,
-          hsl(218, 41%, 35%) 15%,
-          hsl(218, 41%, 20%) 35%,
-          hsl(218, 41%, 10%) 75%,
+          hsl(217, 43.30%, 11.80%) 15%,
+          hsl(219, 40.60%, 12.50%) 35%,
+          hsl(219, 41.20%, 6.70%) 75%,
           hsl(218, 41%, 9%) 80%,
           transparent 100%);
     }
+
+
 
     #radius-shape-1 {
       height: 220px;
       width: 220px;
       top: -60px;
       left: -130px;
-      background: radial-gradient(#111111,rgb(250, 188, 1));
+      background: radial-gradient(HSL(250, 100%, 10%),rgb(250, 188, 1));
       overflow: hidden;
     }
 
@@ -37,7 +39,7 @@
       right: -110px;
       width: 300px;
       height: 300px;
-      background: radial-gradient(#222222,rgb(250, 188, 1));
+      background: radial-gradient(HSL(250, 100%, 10%),rgb(250, 188, 1));
       overflow: hidden;
     }
 
