--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -7,6 +7,7 @@
 <section class="background-radial-gradient overflow-hidden">
   <style>
     .background-radial-gradient {
+      min-height: 100vh;
       background-color: hsl(168, 38.50%, 5.10%);
       background-image: radial-gradient(650px circle at 0% 0%,
           hsl(226, 40.50%, 14.50%) 15%,
@@ -197,6 +198,7 @@
             color: #fff;
         }
     </style>
+    
 {% endblock %}
 
 {% block javascripts %}
