Initiation de store

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,7 +30,7 @@
                         <div class="game-card">
                             <img src="{{ asset('uploads/games/' ~ game.thumbnail) }}" class="img-fluid" alt="{{ game.title }} Cover">
                             <div class="game-card-body">
-                                <h5>{{ game.title }}</h5>
+                                <h5 class="text-black-50">{{ game.title }}</h5>
                                 <p class="text-secondary">{{ game.genre.name }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="rating">
