--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -85,6 +85,10 @@
                 <li class="nav-item">
                     <a class="nav-link {{ app.request.get('_route') starts with 'app_library' ? 'active' }}" href="{{ path('app_library') }}">Library</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ app.request.get('_route') starts with 'app_cart' ? 'active' }}" href="{{ path('app_cart') }}">My Cart</a>
+                </li>
+
             </ul>
             <div class="d-flex">
                 <!-- <a href="{{ path('app_search') }}" class="btn btn-outline-light me-2"><i class="fas fa-search"></i></a>app_account under this-->
