fix: add padding to footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,11 @@
             flex-direction: column;
         }
 
+        .footer {
+            padding-top: 2rem;
+            padding-bottom: 2rem;
+        }
+
         .navbar {
             background-color: var(--secondary-color) !important;
             padding: 0.8rem 1rem;
