--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,32 +23,38 @@
     <!-- Featured Games -->
     <section class="py-5">
         <div class="container">
-            <h2 class="section-title">Featured Games</h2>
-            <div class="row">
+            <h2 class="section-title mb-4">Featured Games</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 {% for game in featuredGames %}
-                    <div class="col-md-4">
-                        <div class="game-card position-relative">
-                            <img src="{{ asset('uploads/games/' ~ game.thumbnail) }}" class="img-fluid" alt="{{ game.title }} Cover">
-                            <div class="game-card-body">
-                                <h5 class="text-black-50">{{ game.title }}</h5>
-                                <p class="text-secondary">{{ game.genre.name }}</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="rating">
-                                        {% for i in 1..5 %}
-                                            {% if i <= game.averageRating|round %}
-                                                <i class="fas fa-star text-warning"></i>
-                                            {% elseif i == game.averageRating|round(0, 'ceil') and game.averageRating|round != game.averageRating %}
-                                                <i class="fas fa-star-half-alt text-warning"></i>
-                                            {% else %}
-                                                <i class="far fa-star text-warning"></i>
-                                            {% endif %}
-                                        {% endfor %}
-                                        <span class="ms-1">{{ game.averageRating|number_format(1) }}</span>
-                                    </div>
-                                    <span class="game-price">${{ game.price|number_format(2) }}</span>
-                                </div>
-                                <a href="" class="stretched-link"></a>
+                    <div class="col">
+                        <div class="card h-100 game-card shadow-sm">
+                            <div class="card-img-top-container" style="height: 200px; overflow: hidden;">
+                                <img src="{{ asset('uploads/games/' ~ game.thumbnail) }}"
+                                     class="img-fluid w-100 h-100 object-fit-cover scalable-image"
+                                     alt="{{ game.title }} Cover">
                             </div>
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title text-truncate">{{ game.title }}</h5>
+                                <p class="card-text text-muted mb-2">{{ game.genre.name }}</p>
+                                <div class="mt-auto">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="rating">
+                                            {% for i in 1..5 %}
+                                                {% if i <= game.averageRating|round %}
+                                                    <i class="fas fa-star text-warning"></i>
+                                                {% elseif i == game.averageRating|round(0, 'ceil') and game.averageRating|round != game.averageRating %}
+                                                    <i class="fas fa-star-half-alt text-warning"></i>
+                                                {% else %}
+                                                    <i class="far fa-star text-warning"></i>
+                                                {% endif %}
+                                            {% endfor %}
+                                            <span class="ms-1">{{ game.averageRating|number_format(1) }}</span>
+                                        </div>
+                                        <span class="text-primary fw-bold">${{ game.price|number_format(2) }}</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#" class="stretched-link"></a>
                         </div>
                     </div>
                 {% endfor %}
@@ -99,7 +105,7 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h3 class="card-title">{{ freeGame.title }}</h3>
-                                        <p class="card-text">{{ freeGame.shortDescription }}</p>
+                                        <p class="card-text text-black-50">{{ freeGame.shortDescription }}</p>
                                         <p class="card-text"><small class="text-secondary">Free until {{ freeGame.freeUntil|date('F j') }}</small></p>
                                         <a href="" class="btn btn-primary">Get It Now</a>
                                     </div>
@@ -120,8 +126,10 @@
             <div class="row">
                 {% for newsItem in latestNews %}
                     <div class="col-md-4 mb-4">
-                        <div class="card bg-secondary border-0 h-100">
-                            <img src="{{ asset('uploads/games/' ~ newsItem.thumbnail) }}" class="card-img-top" alt="{{ newsItem.title }}">
+                        <div class="game-card bg-secondary border-0 h-100">
+                            <div class="card-img-top-container scalable-image bg-transparent border-0">
+                                <img src="{{ asset('uploads/games/' ~ newsItem.thumbnail) }}" class="card-img-top" alt="{{ newsItem.title }}">
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">{{ newsItem.title }}</h5>
                                 <a href="{{ path('app_news_show', {id: newsItem.id, slug: newsItem.slug}) }}" class="btn btn-sm btn-primary">Read More</a>
