--- a/templates/store/index.html.twig
+++ b/templates/store/index.html.twig
@@ -54,4 +54,5 @@
             </div>
         </div>
     </section>
+    <script src="{{ asset('js/store.js') }}"></script</script>
 {% endblock %}
